--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,16 @@
 .home {
 
+
+header{
+  display: flex;
+    h1{
+      margin: 20px;
+      padding: 20px;
+    }
+}
+
+
+
   .content-section {
     margin: 30px 0;
     display: flex;
