--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,15 @@
 // Navigation Styles here
+
+nav {
+    margin-top: 30px;
+	margin-left: 450px;
+	margin-bottom: 30px;
+	width: 500px;
+	justify-content: space-around;
+	display: flex;
+        a{
+            text-decoration: none;
+            font-size: 16px;
+            color: black;
+         }
+}
