--- a/css/index.css
+++ b/css/index.css
@@ -168,18 +168,23 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-nav {
-  margin-top: 30px;
-  margin-left: 450px;
-  margin-bottom: 30px;
-  width: 500px;
-  justify-content: space-around;
-  display: flex;
+.main-nav {
+  width: 100%;
+  height: 90px;
+  background: #FFFFFF;
+  border-bottom: 2px dashed #C0C0C0;
 }
-nav a {
+.main-nav .nav-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.main-nav .nav-container a {
+  font-size: 18px;
   text-decoration: none;
-  font-size: 16px;
   color: black;
+  padding: 20px;
 }
 .footer {
   width: 100%;
@@ -192,12 +197,12 @@ nav a {
   font-size: 1.6rem;
   padding: 20px;
 }
-.home header {
-  display: flex;
+.home .intro {
+  border-bottom: 2px dashed #C0C0C0;
 }
-.home header h1 {
-  margin: 20px;
-  padding: 20px;
+.home .intro img {
+  max-width: 100%;
+  height: auto;
 }
 .home .content-section {
   margin: 30px 0;
