--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,15 +1,12 @@
 .home {
 
-
-header{
-  display: flex;
-    h1{
-      margin: 20px;
-      padding: 20px;
+  .intro {
+    border-bottom: 2px dashed #C0C0C0;
+    img {
+      max-width: 100%;
+      height: auto;
     }
-}
-
-
+  }
 
   .content-section {
     margin: 30px 0;
