--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,15 +1,20 @@
 // Navigation Styles here
 
-nav {
-    margin-top: 30px;
-	margin-left: 450px;
-	margin-bottom: 30px;
-	width: 500px;
-	justify-content: space-around;
-	display: flex;
+.main-nav {
+    width: 100%;
+    height: 90px;
+    background: #FFFFFF;
+    border-bottom: 2px dashed #C0C0C0;
+    .nav-container {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         a{
+            font-size: 18px;
             text-decoration: none;
-            font-size: 16px;
             color: black;
-         }
+            padding: 20px;
+        }
+    }
 }
