--- a/css/index.css
+++ b/css/index.css
@@ -250,3 +250,15 @@ img {
   width: 30%;
   margin-bottom: 30px;
 }
+.btn {
+  display: block;
+  background-color: #3db491;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+  font-size: 2rem;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+}
