--- a/less/home-page.less
+++ b/less/home-page.less
@@ -67,3 +67,17 @@
     }
   }
 }// home
+
+.btn {
+  display: block;
+  background-color: #3db491;
+  margin: 0 10px 20px;
+  cursor: pointer;
+  width: 200px;
+  height: 35px;
+  font-size: 2rem;
+  border-radius: 10px;
+  color: white;
+  text-align: center;
+
+}
