fixed button, finished mobile

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,14 @@
 // Mixins in here
-.custom-btn(){
-    
+.custom-btn(@width, @height){
+    display: block;
+    background-color: #52b0ea;
+    margin: 0 10px 20px;
+    cursor: pointer;
+    width: @width;
+    height: @height;
+    font-size: 2rem;
+    border-radius: 10px;
+    color: white;
+    text-align: center;
+    padding: 7px;
 }
