--- a/css/index.css
+++ b/css/index.css
@@ -180,6 +180,13 @@ img {
   align-items: center;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .main-nav .nav-container {
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 10px;
+  }
+}
 .main-nav .nav-container a {
   font-size: 18px;
   text-decoration: none;
@@ -196,6 +203,17 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .container {
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+@media (max-width: 500px) {
+  .home {
+    width: 90%;
+    margin: 0 5%;
+  }
 }
 .home .intro {
   border-bottom: 2px dashed #C0C0C0;
@@ -214,9 +232,21 @@ img {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+    padding: 0;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+    padding: 0;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
@@ -233,9 +263,20 @@ img {
   padding-right: 1%;
   padding-left: 0;
 }
+@media (max-width: 500px) {
+  .home .inverse-content .img-content {
+    order: 1;
+    width: 100%;
+  }
+}
 .home .content-destination {
   width: 75%;
   margin: 0 auto 30px;
+}
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 100%;
+  }
 }
 .home .content-destination img {
   border-radius: 10px;
@@ -246,13 +287,24 @@ img {
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    flex-wrap: wrap;
+  }
+}
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
 }
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+    margin: 0 auto 30px;
+  }
+}
 .btn {
   display: block;
-  background-color: #3db491;
+  background-color: #52b0ea;
   margin: 0 10px 20px;
   cursor: pointer;
   width: 200px;
@@ -261,4 +313,10 @@ img {
   border-radius: 10px;
   color: white;
   text-align: center;
+  padding: 7px;
+}
+@media (max-width: 500px) {
+  .btn {
+    width: 100%;
+  }
 }
