--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,11 +1,25 @@
 .home {
 
+  .container {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+  }
+  @media @mobile {
+   
+      width: 90%;
+      margin: 0 5%;
+  }
+  
+
   .intro {
     border-bottom: 2px dashed #C0C0C0;
     img {
       max-width: 100%;
       height: auto;
     }
+ 
+    
   }
 
   .content-section {
@@ -19,14 +33,26 @@
     .text-content {
       width: 48%;
       padding-right: 1%;
+
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+    }
+
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      @media @mobile {
+        width: 100%;
+        padding: 0;
+      }
+
       img {
         border-radius: 10px;
+        
       }
     }
   }
@@ -43,12 +69,21 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+
+      @media @mobile {
+        order: 1;
+        width: 100%;
+      }
     }
   }
 
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
+
+    @media @mobile {
+      width: 100%;
+    }
 
     img {
       border-radius: 10px;
@@ -61,23 +96,28 @@
     display: flex;
     justify-content: space-between;
 
+    @media @mobile {
+      flex-wrap: wrap;
+    }
+
     .destination {
       width: 30%;
       margin-bottom: 30px;
+
+      @media @mobile {
+        width: 80%;
+        margin: 0 auto 30px;
+      }
     }
   }
 }// home
 
 .btn {
-  display: block;
-  background-color: #3db491;
-  margin: 0 10px 20px;
-  cursor: pointer;
-  width: 200px;
-  height: 35px;
-  font-size: 2rem;
-  border-radius: 10px;
-  color: white;
-  text-align: center;
+  .custom-btn(200px, 35px)
 
+}
+.btn {
+@media @mobile {
+  width: 100%;
+}
 }
