--- a/less/navigation.less
+++ b/less/navigation.less
@@ -10,6 +10,14 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @media @mobile {     
+              flex-wrap: wrap;
+              justify-content: center;
+              padding-top: 10px;
+            }
+        
+
         a{
             font-size: 18px;
             text-decoration: none;
